--- a/Desafios/dmeu/estilo/style.css
+++ b/Desafios/dmeu/estilo/style.css
@@ -30,7 +30,7 @@ body{
 }
 header{
     background-image: linear-gradient(to bottom, var(--cor03), var(--cor05));
-    height: 180px;
+    height: 190px;
     color: white;
 }
 header h1{
@@ -46,13 +46,16 @@ header p{
     margin: auto;
     text-align: center;
     font-size: 1em;
+    
 }
 nav{
     background-color: var(--cor05);
     padding: 15px;
     box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.267);
+    
 }
 nav a {
+    padding-top: 20px;
     text-decoration: none;
     color: white;
     padding: 10px;
