--- a/Desafios/110/estilo/style.css
+++ b/Desafios/110/estilo/style.css
@@ -56,7 +56,7 @@ header > p{
     margin: auto;
     padding-left: 10px;
     padding-right: 10px;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.274);
 }
 nav{
@@ -181,4 +181,3 @@ footer a:hover{
     text-decoration: underline;
     color: var(--cor1);
 }
-footer::emp
