--- a/Desafios/110/estilo/style.css
+++ b/Desafios/110/estilo/style.css
@@ -66,7 +66,7 @@ nav{
 }
 nav > a {
     color: var(--cor1);
-    padding: 10px;
+    padding: 20px 10px 10px 10px;
     text-decoration: none;
     font-weight: bold;
     transition-duration: 0.5s;
