--- a/Desafios/projeto-cordel/estilo/style.css
+++ b/Desafios/projeto-cordel/estilo/style.css
@@ -1,13 +1,26 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
 *{
     margin: 0px;
     padding: 0px;
+}
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+
+    --font2: 'Passion One', cursive;
+    
+    --font3: 'Sriracha', cursive;    
 }
 
 html, body{
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--font1);
+    
 }
 
 header{
@@ -18,6 +31,8 @@ header{
 header > h1{
     padding-top: 50px;
    font-variant: small-caps;
+   font-family: var(--font2);
+   font-size: 10vw;
 }
 header >p{
     padding-bottom: 50px;
@@ -36,6 +51,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 
 section.normal{
@@ -50,7 +67,8 @@ section.imagem{
 
 section.imagem >p{
     background-color: rgba(0, 0, 0, 0.247);
-    width: 400px ;
+    display: inline-block;
+    padding: 5px;
 }
 
 
